fix: mixed channel mode ad background color legibility after BS5

--- a/scss/_chat.scss
+++ b/scss/_chat.scss
@@ -319,7 +319,8 @@
 
 .messages-both {
   .message-ad:not(.message-score) {
-    background-color: theme-color-level('info', -4);
+    --bs-bg-opacity: 0.3;
+    background-color: rgba(var(--bs-info-rgb), var(--bs-bg-opacity)) !important;
     padding: 0 2px 2px 2px;
     box-shadow: $gray-500 -2px -2px 2px inset;
   }
